# v6-federated-algo-core-v6

./: .gitignore  pyproject.toml
tests/: test_adapters.py  test_orchestration.py  test_registry.py  test_review.py  test_runtime.py
v6_federated_core/: __init__.py  adapters.py  errors.py  orchestration.py  policy.py  registry.py  review.py  runtime.py  types.py
