[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v6-federated-algo-core-py"
version = "0.1.0"
description = "Shared typed primitives for vantage6 algorithms"
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2,<3",
]

[tool.setuptools.packages.find]
include = ["v6_federated_core*"]
